Add TypeScript definitions, IIFE bundle, and width option
- Add src/qr-canvas.d.ts for TypeScript support
- Add dist/qr-canvas.iife.js for script tag usage
- Add width option to example.html
- Update README with script tag usage docs

--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "type": "module",
   "main": "src/qr-canvas.js",
   "module": "src/qr-canvas.js",
+  "types": "src/qr-canvas.d.ts",
   "exports": {
     ".": {
       "import": "./src/qr-canvas.js",
+      "types": "./src/qr-canvas.d.ts",
       "default": "./src/qr-canvas.js"
     }
   },
   "files": [
-    "src"
+    "src",
+    "dist"
   ],
   "keywords": [
     "qr",
