--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qr-canvas-js",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Minimal, zero-dependency QR code generator for canvas",
   "type": "module",
   "main": "src/qr-canvas.js",
@@ -17,6 +17,11 @@
     "src",
     "dist"
   ],
+  "scripts": {
+    "build": "esbuild src/qr-canvas.js --bundle --format=iife --global-name=QRCanvas --outfile=dist/qr-canvas.iife.js --banner:js=\"// qr-canvas-js v1.1.0 | MIT\" && esbuild src/qr-canvas.js --bundle --format=iife --global-name=QRCanvas --minify --outfile=dist/qr-canvas.min.js --banner:js=\"// qr-canvas-js v1.1.0 | MIT\"",
+    "test": "vitest run",
+    "prepublishOnly": "npm run build"
+  },
   "keywords": [
     "qr",
     "qrcode",
@@ -29,5 +34,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/mttkllr/qr-canvas-js.git"
+  },
+  "devDependencies": {
+    "esbuild": "^0.24.0",
+    "jsqr": "^1.4.0",
+    "vitest": "^2.0.0"
   }
 }
